<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Heat Pump Display</string>

    <string name="title_display">Display</string>
    <string name="title_settings">Settings</string>

    <string name="action_pause">Pause</string>
    <string name="action_resume">Resume</string>

    <string name="label_connecting">Connecting to %s…</string>
    <string name="label_connected">Connected to %s</string>
    <string name="label_connection_error">Could not connect to %s.</string>

    <string name="label_temp_outgoing">Outgoing</string>
    <string name="label_temp_return">Return</string>
    <string name="label_temp_return_should">Return Target</string>
    <string name="label_temp_hot_gas">Hot Gas</string>
    <string name="label_temp_water">Hot Water</string>
    <string name="label_temp_water_should">Hot Water Target</string>
    <string name="label_temp_outdoors">Outdoors</string>
    <string name="label_temp_outdoors_average">Outdoors Average</string>
    <string name="label_temp_source_in">From Heat Source</string>
    <string name="label_temp_source_out">To Heat Source</string>
    <string name="label_time_pump_active">Pump active</string>
    <string name="label_time_compressor_inactive">Compressor inactive</string>
    <string name="label_time_rest">Mandatory rest</string>
    <string name="label_time_return_lower">Return &lt; Target - Hysteresis</string>
    <string name="label_time_return_higher">Return &gt; Target + Hysteresis</string>

    <string name="label_firmware">Firmware</string>

    <string name="label_operating_state">Operating State</string>
    <string name="state_heating">Heating</string>
    <string name="state_water">Hot Water</string>
    <string name="state_swimming_pool">Swimming pool</string>
    <string name="state_power_supply_company">Power supply company</string>
    <string name="state_defrost">Defrost</string>
    <string name="state_noop">Inactive</string>
    <string name="state_ext_energ">External power source</string>
    <string name="state_cooling">Cooling</string>
    <string name="state_unknown">Unknown state</string>

    <string name="label_host">Controller Host/IP-address (like 192.168.0.42)</string>
    <string name="label_port">Controller Port (default 8888 or 8889)</string>

    <string name="setup_missing">Configuration incomplete</string>
    <string name="action_setup">Setup</string>
    <string name="message_no_connection">Could not connect. Check your network connection and settings.</string>
    <string name="action_retry">Retry</string>

    <string name="settings_instructions">You can find the IP address of the controller via its settings interface. The default port is 8888 or 8889.\n\nYou have to be connected to the same network as the controller (for example use a VPN connection into your home for remote access).</string>
    <string name="settings_select_items">Select values to display</string>
    <string name="ask_for_feedback">Enjoy the app? Please rate it on Google Play! Not really? Send feedback at the bottom of the Play Store page.</string>
    <string name="show_on_google_play">Show on Google Play</string>
    <string name="version">Version %s</string>

</resources>
