<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2017 Uwe Trottmann
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/fragment_display_four_columns">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_default"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewDisplayTempOutgoing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="@string/label_temp_outgoing" />

        <TextView
            android:id="@+id/textViewDisplayTempReturn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="@string/label_temp_return" />

        <TextView
            android:id="@+id/textViewDisplayTempWater"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="@string/label_temp_water" />

        <TextView
            android:id="@+id/textViewDisplayTempWaterShould"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="@string/label_temp_water_should" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_default"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewDisplayTempOutdoors"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="@string/label_temp_outdoors" />

        <TextView
            android:id="@+id/textViewDisplayTempReturnShould"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="@string/label_temp_return_should" />

        <TextView
            android:id="@+id/textViewDisplayTempSourceIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="@string/label_temp_source_in" />

        <TextView
            android:id="@+id/textViewDisplayTempSourceOut"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="@string/label_temp_source_out" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_default"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewDisplayTempOutdoorsAvg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="@string/label_temp_outdoors_average" />

        <TextView
            android:id="@+id/textViewDisplayTempHotGas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="@string/label_temp_hot_gas" />

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="2" />

    </LinearLayout>

</merge>
