<!--
  ~ Copyright 2015 Uwe Trottmann
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.uwetrottmann.wpdisplay.ui.DisplayFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_default"
                android:orientation="horizontal">

                <!-- Give focus to prevent auto-scroll to selectable text views -->
                <TextView
                    android:id="@+id/textViewDisplayStatus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    tools:text="Current Status"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <TextView
                    android:id="@+id/textViewDisplayTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="Nov 16, 2014 17:00:57 PM"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textIsSelectable="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_default"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewDisplayTempOutgoing"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="@string/label_temp_outgoing"
                    android:textIsSelectable="true" />

                <TextView
                    android:id="@+id/textViewDisplayTempReturn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="@string/label_temp_return"
                    android:textIsSelectable="true" />

                <TextView
                    android:id="@+id/textViewDisplayTempWater"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="@string/label_temp_water"
                    android:textIsSelectable="true" />

                <TextView
                    android:id="@+id/textViewDisplayTempWaterShould"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="@string/label_temp_water_should"
                    android:textIsSelectable="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_default"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewDisplayTempOutdoors"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="@string/label_temp_outdoors"
                    android:textIsSelectable="true" />

                <TextView
                    android:id="@+id/textViewDisplayTempReturnShould"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="@string/label_temp_return_should"
                    android:textIsSelectable="true" />

                <TextView
                    android:id="@+id/textViewDisplayTempSourceIn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="@string/label_temp_source_in"
                    android:textIsSelectable="true" />

                <TextView
                    android:id="@+id/textViewDisplayTempSourceOut"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="@string/label_temp_source_out"
                    android:textIsSelectable="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_default"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewDisplayTimeActive"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="@string/label_time_pump_active"
                    android:textIsSelectable="true" />

                <TextView
                    android:id="@+id/textViewDisplayTimeInactive"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="@string/label_time_compressor_inactive"
                    android:textIsSelectable="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_default"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewDisplayTimeReturnLower"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="@string/label_time_return_lower"
                    android:textIsSelectable="true" />

                <TextView
                    android:id="@+id/textViewDisplayTimeRest"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="@string/label_time_rest"
                    android:textIsSelectable="true" />

            </LinearLayout>

            <TextView
                android:id="@+id/textViewDisplayTimeReturnHigher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_default"
                tools:text="@string/label_time_return_higher"
                android:textIsSelectable="true" />

            <TextView
                android:id="@+id/textViewDisplayFirmware"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Firmware\nV1.23"
                android:textIsSelectable="true" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/containerDisplaySnackbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:background="@color/snackbar">

        <TextView
            android:id="@+id/textViewDisplaySnackbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:paddingLeft="24dp"
            android:paddingTop="@dimen/padding_large"
            android:paddingBottom="@dimen/padding_large"
            android:maxLines="2"
            android:ellipsize="end"
            tools:text="@string/setup_missing"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/primary_text_default_material_dark" />

        <Button
            android:id="@+id/buttonDisplaySnackbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            tools:text="@string/action_setup"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="?attr/colorAccent"
            android:background="?attr/selectableItemBackgroundBorderless" />

    </LinearLayout>

</FrameLayout>