<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2016 Uwe Trottmann
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/fragment_display_two_columns">

    <TextView
        android:id="@+id/textViewDisplayState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_default"
        tools:text="Operating State\nHeating" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_default"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewDisplayTimeActive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="@string/label_time_pump_active" />

        <TextView
            android:id="@+id/textViewDisplayTimeInactive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="@string/label_time_compressor_inactive" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_default"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewDisplayTimeReturnLower"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="@string/label_time_return_lower" />

        <TextView
            android:id="@+id/textViewDisplayTimeRest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="@string/label_time_rest" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewDisplayTimeReturnHigher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_default"
        tools:text="@string/label_time_return_higher" />

    <TextView
        android:id="@+id/textViewDisplayFirmware"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Firmware\nV1.23" />

</merge>
